--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,6 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.9'
     //鲁班压缩
     implementation 'top.zibin:Luban:1.1.8'
+    //
+    implementation 'com.google.android:flexbox:1.0.0'
 }
