--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,30 +14,43 @@
     <application
             android:name=".base.App"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/logo"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true"
             tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".view.activity.RechargeDetailActivity">
-        </activity>
-        <activity android:name=".view.activity.SearchActivity">
-        </activity>
-        <activity android:name=".view.activity.CheckVoucherActivity">
-        </activity>
-        <activity android:name=".view.activity.CommonWebActivity">
-        </activity>
-        <activity
-                android:name=".view.activity.MainActivity"
-                android:launchMode="singleTask"
-                android:screenOrientation="portrait">
+        <activity android:name=".view.activity.SplashActivity"
+                  android:screenOrientation="portrait"
+                android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".view.activity.RechargeDetailActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".view.activity.SearchActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".view.activity.CheckVoucherActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".view.activity.CommonWebActivity"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity
+                android:name=".view.activity.MainActivity"
+                android:launchMode="singleTask"
+                android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
+
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
         </activity>
         <activity
                 android:name=".view.activity.LoginActivity"
