--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
             android:name="cn.cystal.app.base.App"
             android:allowBackup="true"
-            android:icon="@mipmap/logo"
+            android:icon="@mipmap/launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
