--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         applicationId "cn.cystal.app"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 15
-        versionName "1.0.14"
+        versionCode 16
+        versionName "1.0.15"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -87,9 +87,6 @@ dependencies {
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.4.6'
     //zxing
     implementation 'com.google.zxing:core:3.3.3'
-    // navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha03"
-    //fastjson解析
-    implementation 'com.alibaba:fastjson:1.2.59'
+    //RecyclerView条目分割线
+//    implementation 'com.yanyusong.y_divideritemdecoration:y_divideritemdecoration:2.0'
 }
